# ChangeLog for kde-misc/synaptiks
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/synaptiks/ChangeLog,v 1.33 2012/05/21 14:30:12 johu Exp $

  21 May 2012; Johannes Huber <johu@gentoo.org> synaptiks-0.8.1.ebuild:
  Stable for x86, wrt bug #415781

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> synaptiks-0.8.1.ebuild:
  Stable for amd64, wrt bug #415781

  06 May 2012; Johannes Huber <johu@gentoo.org>
  -files/synaptiks-0.4.0-kcmdesktop.patch, -synaptiks-0.4.0-r1.ebuild:
  Remove old.

  05 May 2012; Markus Meier <maekke@gentoo.org> synaptiks-0.8.0.ebuild:
  x86 stable, bug #401131

  30 Apr 2012; Agostino Sarubbo <ago@gentoo.org> synaptiks-0.8.0.ebuild:
  Stable for amd64, wrt bug #401131

  17 Apr 2012; Michał Górny <mgorny@gentoo.org> synaptiks-0.4.0-r1.ebuild:
  Use mirror://bitbucket.

  27 Mar 2012; Johannes Huber <johu@gentoo.org> synaptiks-0.8.1.ebuild:
  Set python 2 interpreter, bug #387533.

*synaptiks-0.8.1 (26 Mar 2012)

  26 Mar 2012; Johannes Huber <johu@gentoo.org>
  +files/synaptiks-0.8.1-templatesfix.patch, +synaptiks-0.8.1.ebuild:
  Version bump by Chris Reffett <geekboy72@gmail.com> wrt bug #409703.

  26 Mar 2012; Johannes Huber <johu@gentoo.org> synaptiks-0.4.0-r1.ebuild,
  synaptiks-0.8.0.ebuild:
  Update homepage.

  15 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  synaptiks-0.8.0.ebuild:
  setuptools is also DEPEND, thx abcd \& arfrever

  15 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  synaptiks-0.8.0.ebuild:
  Add missing setuptools dependency

  15 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  synaptiks-0.8.0.ebuild:
  Removing --single-version-externally-managed, thx arfrever

  15 Dec 2011; Johannes Huber <johu@gentoo.org> synaptiks-0.8.0.ebuild:
  Use python 2, fixes bug #387533 thanks floppym. Use appropiate eclass for
  test, fixes bug #394575. Fix SRC_URI, uses now mirror, thanks repoman.
