@@ -2,20 +2,18 @@
 Hash: SHA512
 
 AUX synaptiks-0.8.1-templatesfix.patch 1705 RMD160 142c84a7b58903d6f493d5f26b400e5264d71809 SHA1 a378be2707169e1f67117aaba03fa2e6454276c4 SHA256 f7e670522de4ab56b1a3fcf1d3ce1f142db1d708b5fd99d32efc9d0d4c108dbe
-DIST synaptiks-0.8.0.tar.bz2 461581 RMD160 1a3296dfe105d198f97ef2ad7ece74a1404e5015 SHA1 94c3701529b7ca9043614fec65643bd75d893efb SHA256 ba90e6183ca3869fe2d67a7e6750862891af961caf70bc4d0b25937a02094401
 DIST synaptiks-0.8.1.tar.bz2 463495 RMD160 fd837fa6e6dea8e8516ac6b6e1a5ca49999b191b SHA1 31de7095f9c19f1c05f59bb2904d7980edc351dc SHA256 39bbafa6abd63903ba6f9ffd020ec754250ab7800ea9efcdeeebd69c0fcd5707
-EBUILD synaptiks-0.8.0.ebuild 1111 RMD160 d497213434af3ff6f176408ff28fee7650244a27 SHA1 7e5b31d2b243331fe9c03f45981f44f7c50bde9e SHA256 e48d88e3b463d4286a24dd94b1e885207819bf5b05e445533a7b15b54dfed930
 EBUILD synaptiks-0.8.1.ebuild 1469 RMD160 8b65e429702bc890c02ad66da266355b69bb40cb SHA1 013cbaaf9693a2234dd000e9dbf01fe96a5cbe0b SHA256 b6fc9a13e8fa65f1340d6b01724edf8374b3c9c89da764bc7346b3da600aa0bc
-MISC ChangeLog 5066 RMD160 55b72814275bda9ba488b439ac8c2307ab0b5abf SHA1 35a296b2f28720a1f82c810c5828d09e82f69de6 SHA256 7a6bf914cd85dd2c9f14bc6356b7660fdbcd4891c8bae4a27fa54ee7bec07856
+MISC ChangeLog 5154 RMD160 503900cafe76103470c07aa1fc6716bbdc6090a4 SHA1 1648cfedf736f03a2f0ed7d5861acabfdd892d86 SHA256 8786f77cc015507b61cd17fa64587a38c0da80909c2cce744dfa8d3bf0810205
 MISC metadata.xml 342 RMD160 e277f55dd1052603b85603697d607c66205316ce SHA1 90a0dbcf32a00d28be6cc6c3562f346e4c0f506d SHA256 e299145a7bacfc5298a28de947c88ca1489ae100d4b24180a5de5e64e28205b1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPulGAAAoJEO+t9ga+3I3alRYH/1ckt8cxkID/e+3c2i4SS5N1
-tl0m6yRHKB8+Z13ixGu32mLdoDbkzYadeusw7mmQi6BmvyfSWE50fHQ/jib8lT6X
-s5EYoSiVqNMnXWnRD313sRYsN8z5ePUEMbJPazMbh70F0Z3kAIPcTWMoMcSYb+RI
-CpQHosFCg4v/3mhyyv8324JZj6A6BfgcrZhTshfB9RShyyQfu8JGVJZkbgcyS8Da
-D1PVsRQI1aOIANqFlOyRznALVLRuVyMmqynnRE5zOsBCRkYQuHaIzkHegDBobxGS
-jzFh20dYxjNEF5+5VO7ieob82zpCwp9c35ONqcRLr4trWv9X+y/4jDGm0ktyi5M=
-=mDQ/
+iQEcBAEBCgAGBQJPulH5AAoJEO+t9ga+3I3aGUsIAJjkK6OVgXpEMclJ/OAz4gRg
+OO/k/Mujh9YBfzgyvwtrmiBNsUeyOkAlpkyP/NoYyzERmY5KgGbMgChqU9Lv2H7u
+RGZ7yDlwHor6lKBTQq1EtxMrxSmOCo28pm92S7uppJGQygfFtRe+V52NM52IWC11
+LN6vmK7ujw2+zIZLlmNaeojINMTrT9AAZEDk73HImX9HJXaWNK+E3ONeplLRfcEF
+IKvkeQsMnZz9mMtJoRWIZ8NkbNF8xnIwOGGpfaYCqy4HA1knUjRA1B3eKwoEWkQk
++EXmnl1flUTq/cdCdzfOMGUOzCx/mlYLL8tNL9ISWDc6Mr5SQF+1pZsRFHAR4DM=
+=tqa6
 -----END PGP SIGNATURE-----
