@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/synaptiks
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/synaptiks/ChangeLog,v 1.33 2012/05/21 14:30:12 johu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/synaptiks/ChangeLog,v 1.34 2012/05/21 14:32:25 johu Exp $
+
+  21 May 2012; Johannes Huber <johu@gentoo.org> -synaptiks-0.8.0.ebuild:
+  Remove old.
 
   21 May 2012; Johannes Huber <johu@gentoo.org> synaptiks-0.8.1.ebuild:
   Stable for x86, wrt bug #415781
